--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
         </h1>
 
         <!-- Navigation Tabs --><div id="tabs" class="flex flex-wrap justify-center space-y-3 sm:space-y-0 sm:space-x-4 mb-8 p-3 bg-diwali-main rounded-xl shadow-lg">
-            <button data-song="0" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50">
+            <button data-song="0" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50 w-28">
                 Intro
             </button>
-            <button data-song="1" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50">
+            <button data-song="1" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50 w-28">
                 Song 1
             </button>
-            <button data-song="2" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50">
+            <button data-song="2" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50 w-28">
                 Song 2
             </button>
-            <button data-song="3" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50">
+            <button data-song="3" class="tab-button bg-[#3a3a5a] text-white font-semibold py-3 px-6 rounded-lg transition-all duration-300 hover-diwali-button focus:outline-none focus:ring-4 focus:ring-[#fbbf24]/50 w-28">
                 Song 3
             </button>
         </div>
@@ -279,5 +279,3 @@ And all the things that you do
     </script>
 </body>
 </html>
-
-
